# gridwatch-scilly-api

./: .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: code-style.yml  test.yml
src/: db.py  main.py  models.py  schemas.py  tasks.py
