[tool.poetry]
name = "gridwatch-scilly-api"
version = "0.1.0"
description = "REST API for Gridwatch Scilly."
authors = ["George Goldberg <george@appletreetechnology.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
